<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="15dp"
    android:background="@color/white"
    android:padding="36dp"
    tools:context=".Splash_Screen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="30dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="60sp">

        </TextView>

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="false"
            android:src="@drawable/loading"></pl.droidsonroids.gif.GifImageView>


        <TextView
            android:id="@+id/slogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/slogan"
            android:textSize="24sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="30dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/bangers"
            android:text="@string/login"
            android:background="@drawable/buttons"
            android:onClick="loginRedirect"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bangers"
            android:text="@string/register"
            android:background="@drawable/buttons"
            android:onClick="registerRedirect"></androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>




