<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:layout_marginTop="-20dp"
    android:onClick="descriptionPage"
    app:cardBackgroundColor="@color/screenBackground"
    app:cardCornerRadius="12dp"
    app:cardElevation="5dp"
    app:strokeColor="@color/borderColor"
    app:strokeWidth="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:background="#00000000"
            android:padding="25dp" />


        <TextView
            android:id="@+id/itemName"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="55dp"
            android:fontFamily="@font/bangers"
            android:padding="25sp"
            android:text="@string/macdonalds"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/itemprice"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/itemName"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-15dp"
            android:layout_marginBottom="-45dp"
            android:fontFamily="@font/bangers"
            android:padding="25sp"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="12sp" />

        <Button
            android:id="@+id/addtocart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/itemprice"
            android:layout_marginStart="220dp"
            android:background="#00000000"
            android:fontFamily="@font/bangers"
            android:padding="30sp"
            android:text="@string/AddtoCart"
            android:textColor="@color/textColor"
            android:textSize="12sp"></Button>

        <Button
            android:id="@+id/viewdescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/itemprice"
            android:layout_marginStart="105dp"
            android:layout_marginBottom="-55dp"
            android:background="#00000000"
            android:fontFamily="@font/bangers"
            android:padding="30sp"
            android:text="View Description"
            android:textColor="@color/textColor"
            android:textSize="12sp"></Button>




    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
